feat: add path to get toc file (#56)
* feat: add path to get toc file

* chore: remove console log

* chore: fix lint problems

* style: run prettier on some files
