# src/serverBuilder.ts
@@ -10,6 +10,7 @@ import { IConfig, ILogger } from './common/interfaces';
 import { layersRouterFactory } from './layers/routes/layersRouter';
 import { tasksRouterFactory } from './tasks/routes/tasksRouter';
 import { openapiRouterFactory } from './common/routes/openapi';
+import { tocRouterFactory } from './toc/routes/tocRouter';
 
 @injectable()
 export class ServerBuilder {
@@ -34,6 +35,7 @@ export class ServerBuilder {
   private buildRoutes(): void {
     this.serverInstance.use('/layers', layersRouterFactory(container));
     this.serverInstance.use('/tasks', tasksRouterFactory(container));
+    this.serverInstance.use('/toc', tocRouterFactory(container));
     this.serverInstance.use('/', openapiRouterFactory(container));
   }
 
